--- a/wwwroot/css/layout.css
+++ b/wwwroot/css/layout.css
@@ -16,6 +16,7 @@ body {
   margin: 0;
   /* background-color: #f5f7f9; */
   background-color: #f8f8f8;
+  /* background:linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%); */
   overflow-y: auto;
 }
 
